--- a/style/app_item.css
+++ b/style/app_item.css
@@ -135,7 +135,7 @@
 
 .btn_open_url{
     background-color: #62CABA;
-    border: 1px solid #62CABA;
+    border: 1px solid #ccc;
     height: 25px;
 }
 
