--- a/style/index.css
+++ b/style/index.css
@@ -61,7 +61,7 @@ img{
     text-align: center;
     vertical-align: middle;
 
-    padding: 2px 10px;
+    padding: 2px 0;
 }
 
 #txt_search_word{
@@ -105,4 +105,9 @@ img{
 /* 盛放搜索结果，也就是所有app */
 .result_container{
     padding: 5%;
+}
+
+.std_link{
+    color: #2A82E4;
+    text-decoration: underline;
 }
