--- a/style/index.css
+++ b/style/index.css
@@ -2,6 +2,10 @@ img{
     vertical-align: middle;
 }
 
+.hidden{
+    display: none !important;
+}
+
 /* ======  基础布局  ====== */
 
 #content{
@@ -79,6 +83,7 @@ img{
     border-radius: 10px;
     padding: 5px;
     background-color: #fff;
+    cursor: pointer;
 }
 
 
