--- a/style/index.css
+++ b/style/index.css
@@ -15,7 +15,7 @@ img{
     max-width: 500px;
 
     min-height: 98vh;
-    border: 1px dotted black;
+    /*border: 1px dotted black;*/
 
     position: relative;
 }
